--- a/src/components/FavoritesPage.css
+++ b/src/components/FavoritesPage.css
@@ -1,1 +1,17 @@
+button:hover {
+    background-color: darkcyan;
+}
 
+/* .App {
+    display:flex;
+} */
+
+.favorite-container{
+    width: 100%;
+    height: 100%;
+    display:flex;
+}
+
+body{
+    background-color: lightblue;
+}
