--- a/src/CSS/TopRated.css
+++ b/src/CSS/TopRated.css
@@ -4,6 +4,22 @@
 }
 
 .top-rated{
-    width: 150px;
-    display: inline-block;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.top-rated-container{
+    background-color: rgb(41, 41, 85);
+    display: block;
+    height: 100vh;
+    /* flex-wrap: wrap; */
+    /* display: grid; */
+    /* display: inline-block; */
+
+}
+
+.favorite-btn{
+    height: 36px;
 }
