--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -6,3 +6,28 @@
     width: 150px;
     display: inline-block;
 }
+
+#heart {
+    position: relative;
+    width: 10px;
+    height: 9px;
+    display: inline-block;
+  }
+  #heart:before,
+  #heart:after {
+    position: absolute;
+    content: "";
+    left: 5px;
+    top: 0;
+    width: 5px;
+    height: 8px;
+    background: red;
+    border-radius: 50px 50px 0 0;
+    transform: rotate(-45deg);
+    transform-origin: 0 100%;
+  }
+  #heart:after {
+    left: 0;
+    transform: rotate(45deg);
+    transform-origin: 100% 100%;
+  }
