--- a/src/components/FavoritesPage.css
+++ b/src/components/FavoritesPage.css
@@ -1,15 +1,24 @@
-
-
-/* .App {
-    display:flex;
-} */
-
-.favorite-container{
-    width: 100%;
-    height: 100%;
-    display:flex;
+.favorite-container img{
+    width: 100px;
+    height: 100px;
 }
 
-body{
-    background-color: lightblue;
+.favorite{
+    width: 150px;
+    display: inline-block;
+}
+
+.favorite-container{
+    background-color: rgb(41, 41, 85);
+    color: white;
+    height: 100vh;
+}
+
+button{
+    background-color: goldenrod;
+    color: black;
+}
+
+#star{
+  color: goldenrod;
 }
