--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -1,22 +1,59 @@
 .trending-Container img{
     width: 100px;
     height: 100px;
+    border: solid goldenrod 2px ;
 }
 
 .trending{
-    width: 150px;
+    width: 350px;
+    height: 220px;
     display: inline-block;
+    background-color: rgb(59, 59, 124);
+    margin: 8px;
+    padding: 3px;
+    border-radius: 3%;
+    border: solid rgb(141, 141, 226) 1px;
 }
 
 .trending-Container{
     background-color: rgb(41, 41, 85);
     color: white;
-    height: 100vh;
+    height: 270vh;
+    /* height: 100vh; */
+    padding: 30px 30px;
+
 }
 
 button{
-    background-color: goldenrod;
-    /* background-color: rgb(41, 41, 85); */
-    color: black;
+    width: 133px;
+    height: 30px;
+    border-radius: 5%;
+    background-color: rgb(41, 41, 85);
+    color: white;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: 'Kanit', sans-serif;
+    margin: 2px;
+    justify-content: space-between;
 }
 
+button:hover{
+    background-color: goldenrod;
+}
+
+@media screen and (min-width: 768px){
+  
+    
+/* .trending-Container{
+    height: 100vh;
+} */
+
+.trending-Container{
+    background-color: rgb(41, 41, 85);
+    color: white;
+    height: 100vh;
+    padding: 30px 30px;
+
+}
+
+}
