--- a/src/CSS/FavoritesPage.css
+++ b/src/CSS/FavoritesPage.css
@@ -1,27 +1,12 @@
-
-.favorite-Container{
-    width: 100%;
-    height: 100%;
-}
-
-.favorite-img{
-    width: 150px;
-    height: 150px;
+.favorite-container img{
+    width: 100px;
+    height: 100px;
     border: solid goldenrod 2px ;
-
 }
 
-.favorites-btn{
-    width: 200px;
-    height: 30px;
-}
-span{
-    color: white;
-}
-
-.favorite-trending{
-    height: 320px;
+.favorite{
     width: 350px;
+    height: 220px;
     display: inline-block;
     background-color: rgb(59, 59, 124);
     margin: 8px;
@@ -29,3 +14,53 @@ span{
     border-radius: 3%;
     border: solid rgb(141, 141, 226) 1px;
 }
+
+.favorite-container{
+    background-color: rgb(41, 41, 85);
+    color: white;
+    height: 270vh;
+    /* height: 100vh; */
+    padding: 30px 30px;
+
+}
+
+.favorite button{
+    width: 133px;
+    height: 30px;
+    border-radius: 5%;
+    background-color: goldenrod;
+    color: black;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: 'Kanit', sans-serif;
+    margin: 2px;
+    justify-content: space-between;
+}
+
+
+.favorite button:hover{
+    background-color: rgb(41, 41, 85);
+    color: white;
+}
+
+@media screen and (min-width: 768px){
+  
+    
+/* .trending-Container{
+    height: 100vh;
+} */
+
+.favorite-container{
+    background-color: rgb(41, 41, 85);
+    color: white;
+    height: 100vh;
+    padding: 30px 30px;
+
+}
+
+}
+
+#star{
+  color: goldenrod;
+}
+
