--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -24,12 +24,12 @@
 
 }
 
-button{
+.trending button{
     width: 133px;
     height: 30px;
     border-radius: 5%;
-    background-color: rgb(41, 41, 85);
-    color: white;
+    background-color: goldenrod;
+    color: black;
     font-size: 15px;
     font-weight: 300;
     font-family: 'Kanit', sans-serif;
@@ -37,9 +37,10 @@ button{
     justify-content: space-between;
 }
 
-<<<<<<< HEAD
-button:hover{
-    background-color: goldenrod;
+
+.trending button:hover{
+    background-color: rgb(41, 41, 85);
+    color: white;
 }
 
 @media screen and (min-width: 768px){
@@ -58,8 +59,7 @@ button:hover{
 }
 
 }
-=======
+
 #star{
   color: goldenrod;
 }
->>>>>>> main
