--- a/src/CSS/MoviesByGenre.css
+++ b/src/CSS/MoviesByGenre.css
@@ -1,13 +1,65 @@
-.by-genre{
-    width: 150px;
-    display: inline-block;
-}
-
-.by-genre img{
+.by-genre-container img{
     width: 100px;
     height: 100px;
+    border: solid goldenrod 2px ;
+}
+
+.by-genre{
+    width: 350px;
+    height: 220px;
+    display: inline-block;
+    background-color: rgb(59, 59, 124);
+    margin: 8px;
+    padding: 3px;
+    border-radius: 3%;
+    border: solid rgb(141, 141, 226) 1px;
 }
 
 .by-genre-container{
-    padding-top: 10px;
+    background-color: rgb(41, 41, 85);
+    color: white;
+    height: 270vh;
+    /* height: 100vh; */
+    padding: 30px 30px;
+
+}
+
+.by-genre-container button{
+    width: 133px;
+    height: 30px;
+    border-radius: 5%;
+    background-color: rgb(41, 41, 85);
+    color: black;
+    font-size: 15px;
+    font-weight: 300;
+    font-family: 'Kanit', sans-serif;
+    margin: 2px;
+    justify-content: space-between;
+}
+
+
+.by-genre-container button:hover{
+    background-color: goldenrod;
+    color: white;
+}
+
+@media screen and (min-width: 768px){
+  
+    
+/* .trending-Container{
+    height: 100vh;
+} */
+
+.by-genre-container{
+    background-color: rgb(41, 41, 85);
+    color: white;
+    height: 100vh;
+    padding: 30px 30px;
+
+}
+
+}
+
+#star{
+  color: goldenrod;
 }
