--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,8 +1,5 @@
 .nav-bar{
     background-color: rgb(41, 41, 85);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     font-family: 'Kanit', sans-serif;
     box-shadow: 5px 10px 18px black;
     position: relative;
@@ -16,14 +13,15 @@ h1{
     color: aliceblue;
     margin-top: 0;
     padding-top: 15px;
+    font-size: 24px;
 
 }
 
 ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    margin-left: 0px;
+    padding: 0px;
+    /* display: flex; */
 }
 
 li{
@@ -31,12 +29,12 @@ li{
 }
 
 .nav-btn{
-    width: 100px;
+    width: 80px;
     height: 50px;
     border-radius: 5%;
     background-color: rgb(41, 41, 85);
     color: white;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 300;
     font-family: 'Kanit', sans-serif;
     border: 0px;
@@ -49,3 +47,18 @@ button:hover{
     background-color: goldenrod;
 }
 
+
+@media screen and (min-width:480px) {
+
+    .nav-bar{
+         display: flex;
+    justify-content: space-between;
+    align-items: center;
+    }
+    
+    .nav-btn{
+        width: 100px;
+        font-size: 17px;
+    }
+    
+}
