--- a/src/CSS/Genres.css
+++ b/src/CSS/Genres.css
@@ -1,9 +1,21 @@
-.genres-container button{
-    width: 50%;
-}
-
 .genres-container {
     padding-top: 10px;
     background-color: rgb(41, 41, 85);
+    color: white;
     height: 100vh;  
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
+
+.genres-container button{
+    width: 500px;
+    background-color: goldenrod;
+    color: black;
+}
+
+.genres-container button:hover{
+    background-color: rgb(41, 41, 85);
+    color: white;
+}
+
