--- a/src/CSS/MovieInfo.css
+++ b/src/CSS/MovieInfo.css
@@ -1,16 +1,12 @@
 body{
-    margin: auto;
-    text-align: center;
-    background-color: rgb(41, 41, 85);
-}
-
-.movie-container{
-    margin: auto;
-    height: 100vh;
-    padding: 20px;
-    text-align: center;
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(134,47,247,1) 37%, rgba(0,212,255,1) 100%);
+}
+.movie-container{
+    margin: auto;
+    height: 100%;
+    padding: 20px;
+    text-align: center;
     
 }
 .movie-info{
