--- a/src/CSS/TopRated.css
+++ b/src/CSS/TopRated.css
@@ -18,7 +18,7 @@
 .top-rated-container{
     background-color: rgb(41, 41, 85);
     color: white;
-    height: 270vh;
+    height: 100%;
     /* height: 100vh; */
     padding: 30px 30px;
 
@@ -53,7 +53,7 @@
 .top-rated-container{
     background-color: rgb(41, 41, 85);
     color: white;
-    height: 100vh;
+    height: 100%;
     padding: 30px 30px;
 
 }
