--- a/src/CSS/Genres.css
+++ b/src/CSS/Genres.css
@@ -1,4 +1,4 @@
-.genres-container {
+/* .genres-container {
     padding-top: 10px;
     background-color: rgb(41, 41, 85);
     color: white;
@@ -17,5 +17,63 @@
 .genres-container button:hover{
     background-color: rgb(41, 41, 85);
     color: white;
-}
+} */
+
+.dropbtn {
+    background-color: rgb(41, 41, 85);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(41, 41, 85);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    background-color: rgb(41, 41, 85);
+    color: black;
+    padding: 6px 8px;
+    text-decoration: none;
+    display: block;
+  }
+
+  .genrebtn {
+    background-color: goldenrod;
+    width: 100px;
+    height:40px;
+    border-radius: 5%;
+  }
+
+  .genrebtn:hover{
+    background-color: rgb(41, 41, 85);
+    color:white;
+  }
+
+
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: goldenrod;
+  }
+ 
 
