--- a/src/CSS/MovieInfo.css
+++ b/src/CSS/MovieInfo.css
@@ -1,13 +1,13 @@
 body{
-    background: rgb(2,0,36);
-    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(134,47,247,1) 37%, rgba(0,212,255,1) 100%);
+    margin: auto;
+    background-color: rgb(41, 41, 85);
 }
 .movie-container{
-    margin: auto;
-    height: 100%;
+    height: 100vh;
     padding: 20px;
-    text-align: center;
-    
+    /* text-align: center; */
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(134,47,247,1) 37%, rgba(0,212,255,1) 100%);   
 }
 .movie-info{
     font-family: 'Kanit', sans-serif;
@@ -49,6 +49,6 @@ button{
     }
 
     .overview-description{
-        padding: 0px 200px;
+        padding: 0px 280px;
     }  
 }
